Add city-population-game  and country_surface-game components

--- a/GeoMaster-UI/src/app/app.component.html
+++ b/GeoMaster-UI/src/app/app.component.html
@@ -42,7 +42,7 @@
                 <a [routerLink]="['country-population-game']" class="sidebar-link">By Country Population</a>
               </li>
               <li class="sidebar-item">
-                <a href="#" class="sidebar-link">By Country Surface Area</a>
+                <a [routerLink]="['country-surface-game']" class="sidebar-link">By Country Surface Area</a>
               </li>
             </ul>
           </li>
@@ -52,7 +52,7 @@
             </a>
             <ul id="auth" class="sidebar-dropdown list-unstyled collapse">
               <li class="sidebar-item">
-                <a href="#" class="sidebar-link">By City Population</a>
+                <a [routerLink]="['city-population-game']" class="sidebar-link">By City Population</a>
               </li>
             </ul>
           </li>
